--- a/css/home.css
+++ b/css/home.css
@@ -5,7 +5,6 @@
   background-image: url(../img/PHOTOS/vincent-van-zalinge-398122.jpg);
   background-size: cover;
   background-position: center;
-  background-position: center -275px;
   position: relative;
 }
 
